# jnidemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lee/jni/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JNIUtils.cpp  myLog.h  native-lib.cpp
app/src/main/java/com/lee/jni/: MainActivity.kt  Person.kt
app/src/main/java/com/lee/jni/utils/: JNIUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lee/jni/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
